Concentrate nearly all pixmap .xpm loading in one place. More controlled loading of pixmaps, would allow to extend it to PNG and SVG. Remove the CONFIG_LOOK_* preprocessor symbols as they were not usefully implemented and just cluttered. Streamline wmLook and make it print useful info in --postpreferences. Make stderr line buffered.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -269,8 +269,11 @@ icewm_SOURCES = \
 	wmmgr.cc \
 	wmmgr.h \
 	appnames.h \
-	wmapp.cc \
 	guievent.h \
+	wpixmaps.h \
+	wpixres.cc \
+	wpixres.h \
+	wmapp.cc \
 	wmapp.h \
 	wmframe.cc \
 	wmframe.h \
