--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -509,89 +509,5 @@ nobase_dist_pkgdata_DATA = \
 	themes/NanoBlue/icons/thunderbird_32x32.xpm \
 	themes/NanoBlue/icons/xterm_16x16.xpm \
 	themes/NanoBlue/icons/xterm_32x32.xpm \
-	themes/NanoBlue/default.theme \
-	themes/Natural/closeA.xpm \
-	themes/Natural/closeI.xpm \
-	themes/Natural/dframeAB.xpm \
-	themes/Natural/dframeABL.xpm \
-	themes/Natural/dframeABR.xpm \
-	themes/Natural/dframeAL.xpm \
-	themes/Natural/dframeAR.xpm \
-	themes/Natural/dframeAT.xpm \
-	themes/Natural/dframeATL.xpm \
-	themes/Natural/dframeATR.xpm \
-	themes/Natural/dframeIB.xpm \
-	themes/Natural/dframeIBL.xpm \
-	themes/Natural/dframeIBR.xpm \
-	themes/Natural/dframeIL.xpm \
-	themes/Natural/dframeIR.xpm \
-	themes/Natural/dframeIT.xpm \
-	themes/Natural/dframeITL.xpm \
-	themes/Natural/dframeITR.xpm \
-	themes/Natural/frameAB.xpm \
-	themes/Natural/frameABL.xpm \
-	themes/Natural/frameABR.xpm \
-	themes/Natural/frameAL.xpm \
-	themes/Natural/frameAR.xpm \
-	themes/Natural/frameAT.xpm \
-	themes/Natural/frameATL.xpm \
-	themes/Natural/frameATR.xpm \
-	themes/Natural/frameIB.xpm \
-	themes/Natural/frameIBL.xpm \
-	themes/Natural/frameIBR.xpm \
-	themes/Natural/frameIL.xpm \
-	themes/Natural/frameIR.xpm \
-	themes/Natural/frameIT.xpm \
-	themes/Natural/frameITL.xpm \
-	themes/Natural/frameITR.xpm \
-	themes/Natural/ledclock/a.xpm \
-	themes/Natural/ledclock/colon.xpm \
-	themes/Natural/ledclock/dot.xpm \
-	themes/Natural/ledclock/m.xpm \
-	themes/Natural/ledclock/n0.xpm \
-	themes/Natural/ledclock/n1.xpm \
-	themes/Natural/ledclock/n2.xpm \
-	themes/Natural/ledclock/n3.xpm \
-	themes/Natural/ledclock/n4.xpm \
-	themes/Natural/ledclock/n5.xpm \
-	themes/Natural/ledclock/n6.xpm \
-	themes/Natural/ledclock/n7.xpm \
-	themes/Natural/ledclock/n8.xpm \
-	themes/Natural/ledclock/n9.xpm \
-	themes/Natural/ledclock/p.xpm \
-	themes/Natural/ledclock/slash.xpm \
-	themes/Natural/ledclock/space.xpm \
-	themes/Natural/logoutbutton.xpm \
-	themes/Natural/mail.xpm \
-	themes/Natural/maximizeA.xpm \
-	themes/Natural/maximizeI.xpm \
-	themes/Natural/menuButtonA.xpm \
-	themes/Natural/menuButtonI.xpm \
-	themes/Natural/menubg.xpm \
-	themes/Natural/minimizeA.xpm \
-	themes/Natural/minimizeI.xpm \
-	themes/Natural/newmail.xpm \
-	themes/Natural/nomail.xpm \
-	themes/Natural/restoreA.xpm \
-	themes/Natural/restoreI.xpm \
-	themes/Natural/rolldownA.xpm \
-	themes/Natural/rolldownI.xpm \
-	themes/Natural/rollupA.xpm \
-	themes/Natural/rollupI.xpm \
-	themes/Natural/switchbg.xpm \
-	themes/Natural/taskbar/taskbarbg.xpm \
-	themes/Natural/taskbar/taskbuttonactive.xpm \
-	themes/Natural/taskbar/taskbuttonbg.xpm \
-	themes/Natural/taskbar/taskbuttonminimized.xpm \
-	themes/Natural/taskbar/windows.xpm \
-	themes/Natural/titleAB.xpm \
-	themes/Natural/titleAL.xpm \
-	themes/Natural/titleAM.xpm \
-	themes/Natural/titleAT.xpm \
-	themes/Natural/titleIB.xpm \
-	themes/Natural/titleIL.xpm \
-	themes/Natural/titleIM.xpm \
-	themes/Natural/titleIT.xpm \
-	themes/Natural/unreadmail.xpm \
-	themes/Natural/default.theme
+	themes/NanoBlue/default.theme
 
