partially address issue #146
- using --backend=html4 gets rid of the CSS

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,7 +11,7 @@ dist_man1_MANS = \
 
 
 $(html_documentation): icewm.adoc
-	$(ASCIIDOC) $<
+	$(ASCIIDOC) --backend=html4 $<
 
 CLEANFILES = $(html_documentation)
 
