better fix for issue #146

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,7 +11,7 @@ dist_man1_MANS = \
 
 
 $(html_documentation): icewm.adoc
-	$(ASCIIDOC) --backend=html4 $<
+	$(ASCIIDOC) $(ASCIIDOC_BACKEND) $<
 
 CLEANFILES = $(html_documentation)
 
