--- a/README.md.in
+++ b/README.md.in
@@ -160,10 +160,14 @@ pull requests if you can.  If you would like to perform regular maintenance
 activities (e.g. if you are a maintainer of an IceWM package for a
 distribution), contact me for push access.
 
+I normally like to have the issuers of problem reports close the report once
+it has been resolved.  I do not want you to think that we are being dismissive,
+because I welcome all reports.
+
 Bug reports, feedback, and suggestions pertaining to the original CVS version
 can be sent to: Marko.Macek@gmx.net or icewm-user@lists.sourceforge.net
 
-See also BUGS, TODO and the sites at:
+See also [BUGS][9], [TODO][7] and the sites at:
 
   - http://www.icewm.org/
   - http://www.sourceforge.net/projects/icewm/
@@ -175,7 +179,8 @@ Development
 
 If you would like to develop against this fork, the easiest way is to obtain a
 [GitHub account][10], fork the [repository][1] and perform your development.
-Send me a pull request when you have something stable.
+Send me a pull request when you have something stable.  If you submit regular
+pull requests that get accepted, I will just give to push access to save time.
 
 
 Translations
@@ -184,7 +189,8 @@ Translations
 You can provide translations by patching `.po` files and issuing pull requests,
 or you can use the [openSUSE weblate tool][11].  There are two XDG files,
 [icewm.desktop][18] and [icewm-session.desktop][19] than may need manual
-translations.
+translations.  If you have difficulties using the tools, just send me the updated
+`.po` file or a patch to apply.
 
 
 [1]: https://github.com/bbidulock/@PACKAGE@/
@@ -195,6 +201,7 @@ translations.
 [6]: https://github.com/bbidulock/icewm/blob/@BRANCH@/NEWS
 [7]: https://github.com/bbidulock/icewm/blob/@BRANCH@/TODO
 [8]: https://github.com/bbidulock/icewm/blob/@BRANCH@/COPYING
+[9]: https://github.com/bbidulock/icewm/blob/@BRANCH@/BUGS
 [10]: https://github.com/
 [11]: http://l10n.opensuse.org/
 [12]: http://sf.net/project/showfiles.php?group_id=31&release_id=31119
@@ -205,6 +212,6 @@ translations.
 [17]: http://bbkeys.sourceforge.net/
 [18]: https://github.com/bbidulock/icewm/blob/@BRANCH@/lib/icewm.desktop
 [19]: https://github.com/bbidulock/icewm/blob/@BRANCH@/lib/icewm-session.desktop
-[20]: INSTALL-cmakebuild.md
+[20]: https://github.com/bbidulock/icewm/blob/@BRANCH@/INSTALL-cmakebuild.md
 
 [ vim: set ft=markdown sw=4 tw=80 nocin nosi fo+=tcqlorn: ]: #
