Make icewm-session much smaller in size by not linking any X11, image or font library. ylibrary.cc and ylibrary.h are obsolete. Reduce AM_INSTALLCHECK_STD_OPTIONS_EXEMPT programs.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,6 @@ AM_CPPFLAGS = -include ../config.h
 AM_CXXFLAGS = $(CORE_CFLAGS) $(XSM_CFLAGS) $(IMAGE_CFLAGS) $(AUDIO_CFLAGS) $(GNOME1_CFLAGS) $(GNOME2_CFLAGS) $(GIO_CFLAGS) -DEXEEXT=$(EXEEXT)
 
 EXTRA_DIST = \
-	ylibrary.cc \
-	ylibrary.h \
 	ypointer.h \
 	globit.c
 
@@ -42,12 +40,7 @@ bin_PROGRAMS = \
 	icewmbg \
 	icewmtray
 
-AM_INSTALLCHECK_STD_OPTIONS_EXEMPT = \
-	icewm-session \
-	icesh \
-	icewmhint \
-	icewmbg \
-	icewmtray
+AM_INSTALLCHECK_STD_OPTIONS_EXEMPT =
 
 
 noinst_PROGRAMS = \
@@ -72,7 +65,6 @@ endif
 
 if BUILD_HELP
 bin_PROGRAMS += icehelp
-AM_INSTALLCHECK_STD_OPTIONS_EXEMPT += icehelp
 endif
 
 if BUILD_SOUND
@@ -333,7 +325,7 @@ icewm_session_SOURCES = \
 	sysdep.h \
 	base.h \
 	icesm.cc
-icewm_session_LDADD = libice.la $(IMAGE_LIBS) $(CORE_LIBS)
+icewm_session_LDADD = libice.la
 
 icewmhint_SOURCES = \
 	intl.h \
