Revert "Update build for new icesound."
This reverts commit eabc8bbce744aea42d12a921b2b9f1f67ba458a2.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -131,7 +131,6 @@ CHECK_INCLUDE_FILE_CXX(limits.h HAVE_LIMITS_H)
 CHECK_INCLUDE_FILE_CXX(locale.h HAVE_LOCALE_H)
 CHECK_INCLUDE_FILE_CXX(netdb.h HAVE_NETDB_H)
 CHECK_INCLUDE_FILE_CXX(netinet/in.h HAVE_NETINET_IN_H)
-CHECK_INCLUDE_FILE_CXX(sndfile.h HAVE_SNDFILE_H)
 CHECK_INCLUDE_FILE_CXX(stddef.h HAVE_STDDEF_H)
 CHECK_INCLUDE_FILE_CXX(stdlib.h HAVE_STDLIB_H)
 CHECK_INCLUDE_FILE_CXX(string.h HAVE_STRING_H)
@@ -214,8 +213,8 @@ endif()
 
 option(CONFIG_COREFONTS "Define to enable X11 core fonts" off)
 option(CONFIG_PDA "Define to enable PDA operation (no window hiding)" off)
-option(CONFIG_GUIEVENTS "Define to enable GUI events for audio" off)
-set(ICESOUND "ALSA,OSS,ESound" CACHE STRING "List of supported audio subsystems")
+option(CONFIG_GUIEVENTS "Define to enable GUI events (experimental)" off)
+set(ICESOUND "ALSA,OSS,Y,ESound" CACHE STRING "List of supported audio subsystems")
 if(CONFIG_GUIEVENTS)
 	string(TOLOWER ${ICESOUND} ICESOUND)
 	message(STATUS "Checking audio subsystems from ${ICESOUND}")
@@ -226,6 +225,10 @@ if(CONFIG_GUIEVENTS)
 	if("${ICESOUND}" MATCHES "esound|esd")
 		pkg_check_modules(esd esound)
 		set(ENABLE_ESD "${esd_FOUND}")
+	endif()
+	if("${ICESOUND}" MATCHES "y")
+		pkg_check_modules(yiff y2)
+		set(ENABLE_YIFF "${yiff_FOUND}")
 	endif()
 	if("${ICESOUND}" MATCHES "oss")
 		set(CONFIG_OSS on)
@@ -387,8 +390,8 @@ ADD_EXECUTABLE(icewmbg${EXEEXT} icewmbg.cc ref.cc ${ICE_COMMON_SRCS})
 SET_TARGET_PROPERTIES(icewmbg${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${icewm_pc_flags}")
 TARGET_LINK_LIBRARIES(icewmbg${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS}  ${pixbuf_LDFLAGS} ${xinerama_LDFLAGS} ${nls_LIBS} ${EXTRA_LIBS})
 
-IF(CONFIG_GUIEVENTS AND (CONFIG_ALSA OR CONFIG_ESD OR CONFIG_OSS))
-ADD_EXECUTABLE(icesound${EXEEXT} icesound.cc upath.cc misc.cc mstring.cc)
+IF(CONFIG_GUIEVENTS AND (CONFIG_ALSA OR CONFIG_ESD OR CONFIG_OSS OR CONFIG_YIFF))
+ADD_EXECUTABLE(icesound${EXEEXT} icesound.cc ycmdline.cc misc.cc mstring.cc)
 SET_TARGET_PROPERTIES(icesound${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${icewm_pc_flags}")
 TARGET_LINK_LIBRARIES(icesound${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${nls_LIBS} ${alsa_LDFLAGS} ${yiff_LDFLAGS} ${esd_LDFLAGS} ${EXTRA_LIBS})
 INSTALL(TARGETS icesound${EXEEXT} DESTINATION ${BINDIR})
@@ -439,6 +442,7 @@ foreach (_variableName
     ENABLE_ALSA
     ENABLE_ESD
     ENABLE_NLS
+    ENABLE_YIFF
 		)
     if("${${_variableName}}" STREQUAL "")
             message(STATUS "${_variableName} => OFF")
