Redesign/rewrite icesound. Try all enabled sound drivers until one works, from AO, ESD, ALSA, OSS, but the order can be specified. Drop support for YIFF. Add support for libAO. Fix support for ALSA. Make class YCommandLine obsolete. Make verbose more usefully verbose. Add -O and -A options. Also check in ~/.config/icewm/sounds/ for audio files. Replace the busy-wait polling with a blocking select. Identify which GUI events are not implemented yet. Update CMake, autoconf/automake and manpage.

--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -50,6 +50,7 @@
 #cmakedefine HAVE_STRLCPY 1
 #cmakedefine HAVE_STRNCASECMP 1
 #cmakedefine HAVE_STRRCHR 1
+#cmakedefine HAVE_STRSIGNAL 1
 #cmakedefine HAVE_STRSTR 1
 #cmakedefine HAVE_STRTOL 1
 #cmakedefine HAVE_STRTOUL 1
