icesound manpage and html.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -10,11 +10,13 @@ SUFFIXES = .1 .1.adoc .adoc .html
 html_documentation = \
 	icewm.html \
 	icewm.1.html \
-	icewmbg.1.html
+	icewmbg.1.html \
+	icesound.1.html
 
 generated_manpages = \
 	icewm.1 \
-	icewmbg.1
+	icewmbg.1 \
+	icesound.1
 
 man1_MANS = \
 	$(generated_manpages)
@@ -23,6 +25,7 @@ dist_doc_DATA = \
 	icewm.adoc \
 	icewm.1.adoc \
 	icewmbg.1.adoc \
+	icesound.1.adoc \
 	$(html_documentation)
 
 CLEANFILES = $(html_documentation) $(generated_manpages)
