Revert "Generate manpages + their html from AsciiDoc."
This reverts commit 01530d7110369e5f1e732dae90c68f2aad097e3b.

Breaks distcheck.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,29 +1,17 @@
 
-SUFFIXES = .1 .1.adoc .adoc .html
-
-.1.adoc.1:
-	$(ASCIIMAN) $(ASCIIMAN_FORMAT) $<
-
-.adoc.html:
-	$(ASCIIDOC) $(ASCIIDOC_BACKEND) $<
-
 html_documentation = \
-	icewm.html \
-	icewm.1.html \
-	icewmbg.1.html
-
-generated_manpages = \
-	icewm.1 \
-	icewmbg.1
-
-man1_MANS = \
-	$(generated_manpages)
+	icewm.html
 
 dist_doc_DATA = \
 	icewm.adoc \
-	icewm.1.adoc \
-	icewmbg.1.adoc \
 	$(html_documentation)
 
-CLEANFILES = $(html_documentation) $(generated_manpages)
+dist_man1_MANS = \
+	icewm.man
+
+
+$(html_documentation): icewm.adoc
+	$(ASCIIDOC) $(ASCIIDOC_BACKEND) $<
+
+CLEANFILES = $(html_documentation)
 
