Revert "ASCIIMAN and ASCIIMAN_FORMAT variables for generating manpages from AsciiDoc."
This reverts commit c48a58a5066e5b2eab1c8246de93ed949b1256b0.

Breaks distcheck.

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([icewm],[1.4.2.115],[https://github.com/bbidulock/icewm/issues])
-AC_REVISION([1.4.2.115])
+AC_INIT([icewm],[1.4.2],[https://github.com/bbidulock/icewm/issues])
+AC_REVISION([1.4.2])
 AC_CONFIG_SRCDIR([src/ysmapp.cc])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -11,10 +11,10 @@ AC_CONFIG_AUX_DIR([scripts])
 AC_USE_SYSTEM_EXTENSIONS
 AC_CANONICAL_TARGET
 
-DATE='2017-08-13'
+DATE='2017-07-30'
 AC_SUBST([DATE])
 
-BRANCH='icewm-1-4-BRANCH'
+BRANCH='1.4.2'
 AC_SUBST([BRANCH])
 
 APPLICATIONS='icewm icewm-session icesh icewmhint icewmbg icewmtray'
@@ -53,20 +53,7 @@ if test -z "$ASCIIDOC_BACKEND"; then
 	case "$ASCIIDOC" in
 		asciidoc) ASCIIDOC_BACKEND="--backend=html4" ;;
 		asciidoctor) ASCIIDOC_BACKEND="--backend=html5" ;;
-		*) AC_MSG_WARN([ASCIIDOC $ASCIIDOC is not supported.]) ;;
 	esac
-fi
-
-AC_ARG_VAR([ASCIIMAN],[asciidoc to manpage converter. @<:@default=asciidoctor@:>@])
-AC_CHECK_PROGS([ASCIIMAN],[asciidoctor a2x],[${am_missing_run}asciidoctor],[$PATH])
-
-AC_ARG_VAR([ASCIIMAN_FORMAT],[asciidoc manpage option @<:@default=NONE@:>@])
-if test -z "$ASCIIMAN_FORMAT"; then
-        case "$ASCIIMAN" in
-                a2x) ASCIIMAN_FORMAT="--format=manpage" ;;
-                asciidoctor) ASCIIMAN_FORMAT="--backend=manpage" ;;
-                *) AC_MSG_WARN([ASCIIMAN $ASCIIMAN is not supported.]) ;;
-        esac
 fi
 
 LT_PATH_LD
